# vm2026

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  update.sh
.streamlit/: config.toml
app/: app.py  common.py
dbt/: dbt_project.yml  profiles.yml
dbt/models/marts/: fct_fixtures.sql  fct_matches.sql  player_goal_share.sql
dbt/models/staging/: _sources.yml  stg_matches.sql
docs/: MODELL-LOG.md
ingest/: coaches.py  goalscorers.py  results.py  snapshot.py  squads.py  wc_schedule.py
models/: backtest.py  poisson.py  scorers.py  simulate.py  simulate_tournament.py  tournament.py
