[project]
name = "vm2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-duckdb>=1.10.1",
    "duckdb>=1.5.3",
    "httpx>=0.28.1",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scipy>=1.17.1",
    "statsmodels>=0.14.6",
    "streamlit>=1.58.0",
]
